dist/1.0/bin/sample/retrieveUnpackaged/objects/OrderLine__c.object
<CustomObject>
    <fields>
        <fullName>End_Billing_Customer__c</fullName>
        <description>Date, when Billing should be stopped for disconnected service</description>
        <inlineHelpText>Date, when Billing should be stopped for disconnected service</inlineHelpText>
        <label>End Billing Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedDeliveryDateNumberOfWeeks__c</fullName>
        <description>Expected Delivery Date Number Of Weeks</description>
        <inlineHelpText>EDD - Expected Delivery Date is selected from calendar or calculated from number of provided calendar weeks.</inlineHelpText>
        <label>EDD Number of weeks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedDeliveryDate__c</fullName>
        <description>EDD - Expected Delivery Date set manually by AM at the same time when OSD is set</description>
        <inlineHelpText>EDD - Expected Delivery Date set manually by AM at the same time when OSD is set; indicates expected date, when Service should be delivered/modified</inlineHelpText>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTS_Commited_Date__c</fullName>
        <description>Date, when GTS committed to deliver/modify the Service</description>
        <inlineHelpText>Date, when GTS committed to deliver/modify the Service</inlineHelpText>
        <label>GTS Commited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>GTS, for which given Special Offer was defined</description>
        <inlineHelpText>GTS, for which given Special Offer was defined</inlineHelpText>
        <label>GTS Location (Special Offer)</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GTS_Location_from_Order__c</fullName>
        <description>Formula which takes the Order GTS Location -  needed for views</description>
        <formula>OrderLookup__r.GTS_Location__c</formula>
        <inlineHelpText>GTS Location from related Order</inlineHelpText>
        <label>GTS Location from Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_ServiceIDs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PROV_PL_313 Service ID</description>
        <inlineHelpText>Field points the lines, for which serivce Ids (SID) should be generated.</inlineHelpText>
        <label>Generate ServiceIDs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Into_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if values from this Order Line should be copied to Opportunity Product and Order</description>
        <inlineHelpText>Indicates if values from this Order Line should be copied to Opportunity Product and Order</inlineHelpText>
        <label>Include Into Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_in_BCT_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that OL has been included in BCT Caluclation; some attributes will be no longer editable</description>
        <inlineHelpText>Indicates that OL has been included in BCT Caluclation; some attributes will be no longer editable</inlineHelpText>
        <label>Included in BCT Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_in_Technical_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that OL has been included in Technical Project; some attributes will be no longer editable</description>
        <inlineHelpText>Indicates that OL has been included in Technical Project; some attributes will be no longer editable</inlineHelpText>
        <label>Included in Technical Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intercompany_Buisness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this orderline is realized with few GTS.</description>
        <inlineHelpText>Determines if this orderline is realized with few GTS.</inlineHelpText>
        <label>Intercompany Buisness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <description>Interface configured for B-End location</description>
        <inlineHelpText>Interface configured for B-End location</inlineHelpText>
        <label>B-End Interface</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Partial_Cession__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if migration line is for all numbers from Source Service.</description>
        <inlineHelpText>Determines if migration line is for all numbers from Source Service.</inlineHelpText>
        <label>Partial Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Contact_ID__c</fullName>
        <description>Contact, who last modified this Order Line from Extranet (ID of Contact used later to create hyperlink)</description>
        <inlineHelpText>Contact, who last modified this Order Line from Extranet</inlineHelpText>
        <label>Last Modified by Extranet Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Contact_Name__c</fullName>
        <description>Contact, who last modified this Order Line from Extranet (Name used later to create hyperlink)</description>
        <inlineHelpText>Contact, who last modified this Order Line from Extranet</inlineHelpText>
        <label>Last Modified by Extranet Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Contact__c</fullName>
        <description>Contact, who last modified this Order Line from Extranet (due to limit of Lookup fields craeted as hyperlink formula)</description>
        <formula>HYPERLINK(Last_Modified_By_Ext_Contact_ID__c , Last_Modified_By_Ext_Contact_Name__c )</formula>
        <inlineHelpText>Contact, who last modified this Order Line from Extranet</inlineHelpText>
        <label>Last Modified by Extranet Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Txt__c</fullName>
        <description>Date, when given Order Line was last modified from Extranet</description>
        <inlineHelpText>Date, when given Order Line was last modified from Extranet</inlineHelpText>
        <label>Last Modified by Extranet</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <description>Number of Line under Order (number is used as a pert of Order Line Name)</description>
        <inlineHelpText>Number of Line under Order</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <description>Identifies type of action related to selected Product (New Installation, Modification, etc.)</description>
        <inlineHelpText>Identifies type of action related to selected Product (New Installation, Modification, etc.)</inlineHelpText>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Price Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numbers Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numbers Cession</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_to_CBCT__c</fullName>
        <description>Link to CBCT system, to Calculation related to this Order Line</description>
        <formula>IF (OR(ISBLANK(Calculation_Number__c) ,ISNULL(Calculation_Number__c )) ,&apos;No Calculation Number&apos;, HYPERLINK(&quot;https://sk-bct.in.gtsce.com/restricted/showCalculation-&quot; &amp; Calculation_Number__c , &apos;Open CBCT&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to CBCT system, to Calculation related to this Order Line</inlineHelpText>
        <label>Link to CBCT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Mode__c</fullName>
        <description>Used for communication with eWegorz and suspension lines only
part of [PROV]_PL_004: Integration with eWęgorz (aDSL and SHDSL services)</description>
        <inlineHelpText>Used for communication with eWegorz and suspension lines only</inlineHelpText>
        <label>Lock Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vindication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <description>Medium configured for B-End location</description>
        <inlineHelpText>Medium configured for B-End location</inlineHelpText>
        <label>B-End Medium</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Service_Period__c</fullName>
        <description>Indicates minimum service period for given Service</description>
        <inlineHelpText>Indicates minimum service period for given Service (should be provided as number of months)</inlineHelpText>
        <label>Minimum Service Period [months]</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price_Awaiting_Prov__c</fullName>
        <description>Value of Monthly Recurring Price in Awaiting Provisioning Status</description>
        <inlineHelpText>Value of Monthly Recurring Price in Awaiting Provisioning Status</inlineHelpText>
        <label>Monthly Recurring Price Awaiting Prov</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price_Cancelled__c</fullName>
        <description>Value of Monthly Recurring Price in Cancelled Status</description>
        <inlineHelpText>Value of Monthly Recurring Price in Cancelled Status</inlineHelpText>
        <label>Monthly Recurring Price Cancelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price_Configured__c</fullName>
        <description>The field contains the value of the MRP when the OL has been updated and still had status Configured</description>
        <inlineHelpText>The field contains the value of the MRP when the OL has been updated and still had status Configured</inlineHelpText>
        <label>Monthly Recurring Price Configured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price_NEW__c</fullName>
        <description>The field contains the value of the Monthly Recuring Price when the OL has been created or updated and still had new status.</description>
        <inlineHelpText>The field contains the value of the Monthly Recuring Price when the OL has been created or updated and still had new status.</inlineHelpText>
        <label>Monthly Recurring Price_NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price_Submited__c</fullName>
        <description>Value of Monthly Recurring Price in Submitted Status</description>
        <inlineHelpText>Value of Monthly Recurring Price in Submitted Status</inlineHelpText>
        <label>Monthly Recurring Price Submited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_recurring_price__c</fullName>
        <description>Value of Monthly Recurring Price</description>
        <inlineHelpText>Value of Monthly Recurring Price</inlineHelpText>
        <label>Monthly Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Status_Date__c</fullName>
        <description>Date, when new status has been assigned to Order Line</description>
        <inlineHelpText>Date, when new status has been assigned to Order Line</inlineHelpText>
        <label>New Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price_Awaiting_Prov__c</fullName>
        <description>Value of Non Recurring Price in Awaiting Provisioning Status</description>
        <inlineHelpText>Value of Non Recurring Price in Awaiting Provisioning Status</inlineHelpText>
        <label>Non Recurring Price Awaiting Prov.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price_Cancelled__c</fullName>
        <description>Value of Non Recurring Price in Cancelled Status</description>
        <inlineHelpText>Value of Non Recurring Price in Cancelled Status</inlineHelpText>
        <label>Non Recurring Price Cancelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price_Configured__c</fullName>
        <description>The field contains the value of the NRP when the OL has been updated and still had status Configured</description>
        <inlineHelpText>The field contains the value of the NRP when the OL has been updated and still had status Configured</inlineHelpText>
        <label>Non Recurring Price Configured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price_NEW__c</fullName>
        <description>The field contains the value of the Non Recurring Price when the OL has been created or updated and still had new status.</description>
        <inlineHelpText>The field contains the value of the Non Recurring Price when the OL has been created or updated and still had new status.</inlineHelpText>
        <label>Non Recurring Price_NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price_Submited__c</fullName>
        <description>Value of Non Recurring Price in Submitted Status</description>
        <inlineHelpText>Value of Non Recurring Price in Submitted Status</inlineHelpText>
        <label>Non Recurring Price Submited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_recurring_price__c</fullName>
        <description>Value of Non Recurring Price</description>
        <inlineHelpText>Value of Non Recurring Price</inlineHelpText>
        <label>Non Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OL_Awaiting_Provisioning_State_Date__c</fullName>
        <description>Date, when Order Line status was set to Awaiting Provisioning</description>
        <inlineHelpText>Date, when Order Line status was set to Awaiting Provisioning</inlineHelpText>
        <label>OL Awaiting Provisioning State Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OL_Cancelled_State_Date__c</fullName>
        <description>Date, when Order Line status was set to Cancelled</description>
        <inlineHelpText>Date, when Order Line status was set to Cancelled</inlineHelpText>
        <label>OL Cancelled State Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OL_Completed_State_Date__c</fullName>
        <description>Date, when Order Line status was set to Completed</description>
        <inlineHelpText>Date, when Order Line status was set to Completed</inlineHelpText>
        <label>OL Completed State Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OL_Configured_Status_Date__c</fullName>
        <description>Date, when Order Line status was set to Configured</description>
        <inlineHelpText>Date, when Order Line status was set to Configured</inlineHelpText>
        <label>OL Configured Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OL_New_Status_Date__c</fullName>
        <description>Date, when Order Line status was set to New (taken from Line creation date)</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date, when Order Line status was set to New</inlineHelpText>
        <label>OL New Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OL_Submited_State_Date__c</fullName>
        <description>Date, when Order Line status was set to Submitted</description>
        <inlineHelpText>Date, when Order Line status was set to Submitted</inlineHelpText>
        <label>OL Submited State Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly_Awaiting_Provisioning__c</fullName>
        <description>Value of Opex Monthly in Awaiting Provisioning status</description>
        <inlineHelpText>Value of Opex Monthly in Awaiting Provisioning status</inlineHelpText>
        <label>Opex Monthly Awaiting Provisioning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly_Cancelled__c</fullName>
        <description>Value of Opex Monthly in Cancelled status</description>
        <inlineHelpText>Value of Opex Monthly in Cancelled status</inlineHelpText>
        <label>Opex Monthly Cancelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly_Configured__c</fullName>
        <description>The field contains the value of the Opex Monthly when the OL has been updated and still had status Configured</description>
        <inlineHelpText>The field contains the value of the Opex Monthly when the OL has been updated and still had status Configured</inlineHelpText>
        <label>Opex Monthly Configured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly_NEW__c</fullName>
        <description>The field contains the value of the Opex Monthly when the OL has been created or updated and still had new status.</description>
        <inlineHelpText>The field contains the value of the Opex Monthly when the OL has been created or updated and still had new status.</inlineHelpText>
        <label>Opex Monthly_NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly_Rollback__c</fullName>
        <description>Value of Opex Monthly during Rollback</description>
        <inlineHelpText>Value of Opex Monthly during Rollback</inlineHelpText>
        <label>Opex Monthly Rollback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly_Submited__c</fullName>
        <description>Value of Opex Monthly in Submitted status</description>
        <inlineHelpText>Value of Opex Monthly in Submitted status</inlineHelpText>
        <label>Opex Monthly Submited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly__c</fullName>
        <description>Value of Opex Monthly</description>
        <inlineHelpText>Value of Opex Monthly</inlineHelpText>
        <label>Opex Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off_Awaiting_Provisioning__c</fullName>
        <description>Value of Opex One-off in Awaiting Provisioning status</description>
        <inlineHelpText>Value of Opex One-off in Awaiting Provisioning status</inlineHelpText>
        <label>Opex One-off Awaiting Provisioning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off_Cancelled__c</fullName>
        <description>Value of Opex One-off in Cancelled status</description>
        <inlineHelpText>Value of Opex One-off in Cancelled status</inlineHelpText>
        <label>Opex One-off Cancelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off_Configured__c</fullName>
        <description>The field contains the value of the Opex One Off when the OL has been updated and still had status Configured</description>
        <inlineHelpText>The field contains the value of the Opex One Off when the OL has been updated and still had status Configured</inlineHelpText>
        <label>Opex One-off Configured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off_NEW__c</fullName>
        <description>The field contains the value of the Opex One-off when the OL has been created or updated and still had new status.</description>
        <inlineHelpText>The field contains the value of the Opex One-off when the OL has been created or updated and still had new status.</inlineHelpText>
        <label>Opex One-off_NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off_Rollback__c</fullName>
        <description>Value of Opex One-off during Rollback</description>
        <inlineHelpText>Value of Opex One-off during Rollback</inlineHelpText>
        <label>Opex One-off Rollback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off_Submited__c</fullName>
        <description>Value of Opex One-off in Submited status</description>
        <inlineHelpText>Value of Opex One-off in Submited status</inlineHelpText>
        <label>Opex One off Submited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off__c</fullName>
        <description>Value of Opex One-off</description>
        <inlineHelpText>Value of Opex One-off</inlineHelpText>
        <label>Opex One-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_Id__c</fullName>
        <description>Identifier of related Opportunity Product (used to update values on Opportunity Product when something changes on Order Line)</description>
        <inlineHelpText>Identifier of related Opportunity Product (used to update values on Opportunity Product when something changes on Order Line)</inlineHelpText>
        <label>Opportunity Line Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity related to the Order Line, used in order to have Related List of Order Lines directly under Opportunity</description>
        <inlineHelpText>Opportunity related to the Order Line, used in order to have Related List of Order Lines directly under Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderCloseDate__c</fullName>
        <description>Order Close Date</description>
        <inlineHelpText>OCD - Order Close Date set automatically when OrderLine&apos;s status changes to &apos;Completed‘ or ‘Cancelled’.</inlineHelpText>
        <label>Order Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderLookup__c</fullName>
        <description>Relation to Order, that this Order Line belongs to</description>
        <inlineHelpText>Relation to Order, that this Order Line belongs to</inlineHelpText>
        <label>Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>Order Lines (Order)</relationshipLabel>
        <relationshipName>Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderSigningDate__c</fullName>
        <description>Value of Order Signing Date field from related Order</description>
        <formula>OrderLookup__r.OrderSigningDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of Order Signing Date field from related Order</inlineHelpText>
        <label>OrderSigningDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_GTS_Location__c</fullName>
        <description>GTS Location copied from Order object (used to create Views, reporting, etc.)</description>
        <inlineHelpText>GTS Location copied from Order object (used to create Views, reporting, etc.)</inlineHelpText>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Line_Source__c</fullName>
        <description>Source of created Order Line like external system i.e Extranet</description>
        <inlineHelpText>Source of created Order Line like external system i.e Extranet</inlineHelpText>
        <label>Order Line Source</label>
        <picklist>
            <picklistValues>
                <fullName>Extranet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Number of related Order (ORD...)</description>
        <formula>OrderLookup__r.Name</formula>
        <inlineHelpText>Number of related Order (ORD...)</inlineHelpText>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status2__c</fullName>
        <description>Status of related Order; additional field was reqired to trigger notification from OL dependant on Order Status</description>
        <inlineHelpText>Status of related Order; additional field was reqired to trigger notification from OL dependant on Order Status</inlineHelpText>
        <label>Order Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>Status from related Order</description>
        <formula>TEXT(OrderLookup__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status from related Order</inlineHelpText>
        <label>Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Value of Order Type field from related Order</description>
        <formula>TEXT(OrderLookup__r.OrderType__c)</formula>
        <inlineHelpText>Value of Order Type field from related Order</inlineHelpText>
        <label>Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Provisioning_Plan_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Provisioning Plan has been triggered</description>
        <inlineHelpText>Indicates if Provisioning Plan has been triggered</inlineHelpText>
        <label>Provisioning Plan Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Link to Partner Account assigned to related Order</description>
        <formula>HYPERLINK(&quot;/001&quot;&amp; OrderLookup__r.Partner_ID__c , &quot;_blank&quot; )</formula>
        <inlineHelpText>Link to Partner Account assigned to related Order</inlineHelpText>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <description>Email from assigned Partner Account (required for notifications)</description>
        <inlineHelpText>Email from assigned Partner Account (required for notifications)</inlineHelpText>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <description>Name of assigned Provisioning Plan, taken from related Instance</description>
        <formula>Assigned_Provisioning_Plan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of assigned Provisioning Plan, taken from related Instance</inlineHelpText>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedDeliveryDateSetDate__c</fullName>
        <description>Planned Delivery Date Set Date</description>
        <inlineHelpText>Indicates, when Planned Delivery Date was set</inlineHelpText>
        <label>PDDSD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedDeliveryDate__c</fullName>
        <description>Planned Delivery Date</description>
        <inlineHelpText>PDD - Planned Delivery Date. When CDD is set for the first time, PDD should be automatically set too (the same value); then PDD can be modified by PM.</inlineHelpText>
        <label>Planned Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Provisioning_End__c</fullName>
        <description>Planned date, when provisioning for given installation / modification should be completed</description>
        <inlineHelpText>Planned date, when provisioning for given installation / modification should be completed</inlineHelpText>
        <label>Planned Provisioning End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Provisioning_Start__c</fullName>
        <description>Planned date, when provisioning for given installation / modification should be started</description>
        <inlineHelpText>Planned date, when provisioning for given installation / modification should be started</inlineHelpText>
        <label>Planned Provisioning Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Billing_Customer__c</fullName>
        <description>Planned date, when billing for given installation / modification of the Service should be started</description>
        <inlineHelpText>Planned date, when billing for given installation / modification of the Service should be started</inlineHelpText>
        <label>Planned Start Billing Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preparation_failed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates, that there was error during Order Line preparation (automatic assignment of Provisioning Plan, submitting it, etc.)</description>
        <inlineHelpText>Indicates, that there was error during Order Line preparation (automatic assignment of Provisioning Plan, submitting it, etc.)</inlineHelpText>
        <label>Preparation failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductInstanceId__c</fullName>
        <description>Installed product instance ID from CSR (field not used anymore)</description>
        <inlineHelpText>Installed product instance ID from CSR</inlineHelpText>
        <label>Bundle Instance ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
</CustomObject>